test/modules/lydia/inFunc.good
inFunc.chpl:3: error: Modules must be declared at module- or file-scope
